# markdown_app

./: .gitignore  Cargo.toml  README.md
src/: adapter.rs  errors.rs  fairings.rs  handlers.rs  lib.rs  main.rs  parse_file.rs  server.rs
static/: form.html  index.html  style.css
tests/: test_note.md  tests.rs
