[package]
name = "markdown_app"
version = "0.1.0"
edition = "2021"

[dependencies]
figment = "0.10.19"
rocket = "0.5.1"
tokio-postgres = "0.7.12"
dotenvy = "0.15.7"

[dependencies.sqlx]
version = "0.8.2" 
features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate"]

[dependencies.rocket_db_pools]
version = "0.1.0" 
features = ["sqlx_postgres"]
